<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:orientation="horizontal">

    </LinearLayout>

    <EditText
        android:id="@+id/etUsercode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <CheckBox
        android:id="@+id/cbReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reminder"
        android:textAlignment="viewStart"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/login"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:onClick="clkLogin"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/White" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/login_qr"
        android:textAlignment="center" />

    <Button
        android:id="@+id/qrcode"
        android:layout_width="57dp"
        android:layout_height="61dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/qr"
        android:onClick="qrScanner"
        android:text="" />

    <Button
        android:id="@+id/signup"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:onClick="clkSignup"
        android:text="@string/sign_up"
        android:textColor="@color/White" />

</LinearLayout>